# hackathon-1

./: .gitignore  README.md  app.mjs  dashboard.html  doc_2022-11-19_11-52-16.env  package.json
bot/: bot.js
css/: style.min.css
dashboard/: dashboard.html
dashboard/css/: style.min.css
dashboard/js/pages/dashboards/: dashboard1.js
dashboard/scss/core/extra/: extra.scss
js/pages/dashboards/: dashboard1.js
scanner/: Cargo.toml
scanner/src/: main.rs  proc_entity.rs  rds.rs  utils.rs
scss/core/extra/: extra.scss
src/: bot.mjs  cache.mjs  oberver.mjs  observer.mjs  server.mjs
