[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#winapi = "0.3.9"
#psapi-sys = "0.1.1"
#user32-sys = "0.2.0"
[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["debug", "winuser", "tlhelp32", "handleapi"] }