[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["debug", "winuser", "tlhelp32", "handleapi"] }
sysinfo = { version = "0.26.7" }
json = { version = "0.12.4" }
redis = "0.22.1"
dotenv = "0.15.0"
